// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SnippetList should properly render title snippets with Title label as heading 1`] = `
<Fragment>
  <li
    className="snippet-list-item-header metadata-snippet-header"
  >
    <Connect(I18NLink)
      to="/document/sharedId?searchTerm=snippet"
    >
      Summary
    </Connect(I18NLink)>
  </li>
  <li
    className="snippet-list-item metadata-snippet"
    key="0"
  >
    <span>
      <SafeHTML>
        title &lt;b&gt;snippet m1&lt;/b&gt; found
      </SafeHTML>
    </span>
  </li>
  <li
    className="snippet-list-item metadata-snippet"
    key="1"
  >
    <span>
      <SafeHTML>
        title &lt;b&gt;snippet m2&lt;/b&gt; found
      </SafeHTML>
    </span>
  </li>
</Fragment>
`;

exports[`SnippetList should render all metadata snippets with the field label as heading 1`] = `
<Fragment>
  <li
    className="snippet-list-item-header metadata-snippet-header"
  >
    <Connect(I18NLink)
      to="/document/sharedId?searchTerm=snippet"
    >
      Summary
    </Connect(I18NLink)>
  </li>
  <li
    className="snippet-list-item metadata-snippet"
    key="0"
  >
    <span>
      <SafeHTML>
        metadata &lt;b&gt;snippet m1&lt;/b&gt; found
      </SafeHTML>
    </span>
  </li>
  <li
    className="snippet-list-item metadata-snippet"
    key="1"
  >
    <span>
      <SafeHTML>
        metadata &lt;b&gt;snippet m2&lt;/b&gt; found
      </SafeHTML>
    </span>
  </li>
</Fragment>
`;
